refactor: Cars에서 최소 경주 인원을 고려하지 않도록 변경